--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	}
 </style>
 <head>
-	<title></title>
+	<title>cccc</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.38/browser.js"></script>
 </head>
 <body>
